--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "importHelpers": true,
     "sourceMap": false,
     "skipLibCheck": true,
+    "strictNullChecks": true,
     "outDir": "dist/",
     "rootDir": "src/",
     "declaration": true
